# ePC-SAFT-regression

./: .gitignore  AGENTS.md  ARCHITECTURE.yaml  CMakeLists.txt  CONTEXT.md  README.md  pyproject.toml
docs/: README.md  ownership.md
docs/migration/: bootstrap-receipt.yaml
docs/reviews/: independent-review.md
docs/science/: figiel-aqueous-kij-regression.md  figiel-born-diameter-tracer.md  methane-saturation-regression.md  neutral-hydrocarbon-next-slice.md  pure-saturation-regression.md
docs/superpowers/plans/: 2026-07-17-methane-saturation-regression-plan.md  2026-07-17-pure-saturation-ethane-slice-plan.md  2026-07-20-pure-saturation-propane-checkpoint-a-plan.md
docs/superpowers/specs/: 2026-07-17-methane-saturation-regression-design.md
evidence/: binary-kij-preflight.json  candidate-capability.yaml  candidate-fit-receipt.json  ethane-candidate-fit-receipt.json  figiel-aqueous-kij-published-tuple-preflight.json  figiel-born-diameter-candidate.json  propane-candidate-fit-receipt.json
src/: README.md
src/epcsaft_regression/: __init__.py  _next_slice.py  records.py  workflow.py
src/epcsaft_regression/data/: figiel-born-diameter-targets.csv
src/epcsaft_regression/native/: born_diameter_fit.cpp  born_diameter_fit.hpp  methane_contract.cpp  methane_fit.cpp  methane_fit.hpp  methane_fit_internal.hpp  module.cpp  pure_saturation_contract.cpp  pure_saturation_fit.cpp  pure_saturation_fit.hpp  pure_saturation_fit_internal.hpp
tests/: README.md  test_born_tracer.py  test_native_fit.py  test_next_slice_contract.py  test_records.py  test_transport.py
tools/: binary_kij_preflight.cpp  run_binary_kij_preflight.py  run_candidate.py  run_figiel_born_candidate.py
